Fix pixel gap in header

--- a/assets/app.css
+++ b/assets/app.css
@@ -570,6 +570,14 @@ video {
   z-index: 50;
 }
 
+.-twcss-ml-1 {
+  margin-left: -0.25rem;
+}
+
+.-twcss-mt-1 {
+  margin-top: -0.25rem;
+}
+
 .twcss-flex {
   display: flex;
 }
